fix: new styles, designer pallet is wider, less gaps between tasks (#102)

--- a/src/features/WorkflowManager/styles.scss
+++ b/src/features/WorkflowManager/styles.scss
@@ -1,4 +1,5 @@
 @import "~Styles/variables";
+@import "~Styles/mixins";
 
 .c-workflow-designer {
   position: relative;
@@ -42,7 +43,7 @@ svg:not(:root) {
 .b-task-category__header {
   background-color: #40d5bb;
   font-weight: 400;
-  margin: 0 0 2rem 0rem;
+  margin: 0 0 1rem 0rem;
   padding: 0.375rem 2rem;
 }
 
@@ -60,13 +61,15 @@ svg:not(:root) {
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
-  margin-bottom: 1.5rem;
+  //margin-bottom: 1.5rem;
   align-items: center;
 }
 
 .b-task-template__name {
   font-size: 0.875rem;
   padding-left: 1rem;
+  width: 90%;
+  @include text-overflow-ellipsis;
 }
 
 .b-task-template__img {
